# datalasi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  datalasi-schema.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
datalasi/: __init__.py  errors.py
datalasi/adapters/: __init__.py  arrow_adapter.py  pandas_adapter.py  polars_adapter.py  sqlalchemy_adapter.py
datalasi/cli/: __init__.py  commands.py  formatters.py
datalasi/core/: __init__.py  contract.py  expectations.py  types.py  validation.py
datalasi/export/: __init__.py  avro.py  dbt.py  json_schema.py  pydantic_model.py
datalasi/io/: __init__.py  git_backend.py  loaders.py  registry.py  writers.py
tests/: conftest.py
tests/integration/: test_arrow_adapter.py  test_cli.py  test_pandas_adapter.py  test_polars_adapter.py  test_registry.py  test_sqlalchemy_adapter.py
tests/unit/: test_contract.py  test_dbt_export.py  test_expectations.py  test_exports.py  test_io.py  test_pydantic_export.py  test_types.py
