[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datalasi"
version = "0.1.0"
description = "Git-backed data schema versioning and enforcement for Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Malo", email = "malomthethwa@gmail.com" },
]
keywords = [
  "data",
  "contracts",
  "schema",
  "versioning",
  "validation",
  "data-engineering",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "PyYAML>=6.0",
  "click>=8.0",
  "typing-extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
polars = ["polars>=0.20"]
arrow = ["pyarrow>=10"]
sql = ["sqlalchemy>=2.0"]
git = ["gitpython>=3.1"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1",
  "mypy>=1.0",
  "types-PyYAML",
]
all = [
  "pandas>=1.5",
  "polars>=0.20",
  "pyarrow>=10",
  "sqlalchemy>=2.0",
  "gitpython>=3.1",
]

[project.scripts]
datalasi = "datalasi.cli.commands:main"

[project.urls]
Homepage = "https://github.com/malomthethwa/datalasi"
"Bug Tracker" = "https://github.com/malomthethwa/datalasi/issues"
Documentation = "https://github.com/malomthethwa/datalasi#readme"
Changelog = "https://github.com/malomthethwa/datalasi/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["datalasi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=datalasi --cov-report=term-missing"

[tool.coverage.run]
source = ["datalasi"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = true
warn_unused_configs = true
